[package]
name = "vl6180x_stm32f401_examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"
heapless = "0.7.14"
cortex-m-rtic = "1.1.3"
shared-bus = {version = "0.2.4", features = ["cortex-m"]}
vl6180x = {version = "0.1.4", path = "../vl6180x"}

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "vl6180x_stm32f401_examples"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations